--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/public/css/index.css">
+
 </head>
 
 <body>
@@ -19,26 +20,41 @@
 
         <div class="header-menu-wrapper">
 
-            <div class="header-jemok">
-                <h1 class="text-center">PetTalk</h1>
-            </div>
-
-            <div class="header-join-80">
-                <!-- 여기에 내용 추가 -->
-            </div>
-
-            <nav class="tm-nav1" id="tm-nav1">     
-                <ul class="itemul">
-                    <li class ="tm-singup"><a href="singup.html" class="tm-nav-link">
-                        회원가입
-                    </a></li>
-                    <li class ="tm-login"><a href="login.html" class="tm-nav-link">
-                        로그인
-                    </a></li>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" >PetTalk</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active"  href="index.ejs">홈</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">마이페이지</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">게시판</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">마이펫</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">병원찾기</a>
+                  </li>
+                  
                 </ul>
-            </nav>
+                                 
+                <form class="d-flex">
+                    <button type="button" onclick="window.location.href='signup.ejs';">회원가입</button>
+                    <button type="button" onclick="window.location.href='login.ejs';">로그인</button>
+                </form>
 
-        </div>
+                </div>
+
+
+
+
+                
+          </nav>
+         </div>
 
     </header>
 
