feat:index.ejs section 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/public/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
@@ -48,15 +48,28 @@
                 </form>
 
                 </div>
-
-
-
-
-                
           </nav>
          </div>
-
     </header>
+
+    <section class="signup-section">
+     <h2>지금 가입하고 우리 커뮤니티의 혜택을 누리세요!</h2>
+    </section>
+
+    <section class="board-section">
+     <h2>게시판</h2>
+     <p>최근 게시글 미리보기</p>
+    </section>
+
+    <section class="hospital-search">
+     <h2>병원찾기</h2>
+     <p>주변 동물병원을 쉽게 찾아보세요!</p>
+    </section>
+
+    <section class="mypet-section">
+     <h2>마이펫</h2>
+     <p>자신의 반려동물 정보를 입력하고 공유하세요.</p>
+    </section>
 
 
 
