--- a/public/css/mypet.css
+++ b/public/css/mypet.css
@@ -1,17 +1,17 @@
 html {
-  overflow-x: hidden;
+  overflow-x: hidden; /* 수평 스크롤을 숨김 */
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 25px;
-  line-height: 2em;
-  overflow-x: hidden;
+  font-family: 'Source Sans Pro', sans-serif; /* 폰트 설정 */
+  font-size: 20px; /* 기본 글자 크기 설정 */
+  line-height: 2em; /* 줄 간격 설정 */
+  overflow-x: hidden; /* 수평 스크롤을 숨김 */
 }
 
-.container-fluid {
+.container-fluid{
   background-color: rgb(84, 214, 138);
 }
 
@@ -56,5 +56,7 @@ button.btn-primary {
 .addImg img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* 이미지가 컨테이너를 채우도록 조정 */
+  object-fit: cover; /* 이미지가 컨테이너를 채우도록 조정 */ 
+  align-items: center;
+  justify-content: center;
 }
