--- a/views/clinic.ejs
+++ b/views/clinic.ejs
@@ -33,13 +33,13 @@
                     <a class="nav-link" href="/mypage">마이페이지</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">게시판</a>
+                    <a class="nav-link" href="/notice">게시판</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/mypet">마이펫</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">병원찾기</a>
+                    <a class="nav-link" href="/clinic">병원찾기</a>
                   </li>
                   
                 </ul>
