--- a/views/mypet.ejs
+++ b/views/mypet.ejs
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="fontawesome/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/mypage.css">
+  <link rel="stylesheet" href="css/mypet.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
           <a class="navbar-brand">PetTalk</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link active" href="/">홈</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">마이페이지</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">게시판</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">마이펫</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">병원찾기</a></li>
+            <li class="nav-item"><a class="nav-link" href="/mypage">마이페이지</a></li>
+            <li class="nav-item"><a class="nav-link" href="/notice">게시판</a></li>
+            <li class="nav-item"><a class="nav-link" href="/mypet">마이펫</a></li>
+            <li class="nav-item"><a class="nav-link" href="/clinic">병원찾기</a></li>
           </ul>
           <form class="d-flex">
             <button type="button" onclick="window.location.href='/signup';">회원가입</button>
