--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/notice.css">
 
 </head>
 
@@ -54,27 +54,51 @@
     </header>
 
     <!-- 헤더 끝 -->
+    <div class="button-container">
+      <hr>
+      <button style="margin-top: 2px;" type="button" class="btn btn-outline-dark" onclick="location.href='/'">전체게시판</button>
+      <button style="margin-top: 2px;" type="button" class="btn btn-outline-primary" onclick="location.href='/tmiboard'">자유게시판</button>
+      <button style="margin-top: 2px;" type="button" class="btn btn-outline-secondary" onclick="location.href='/infoboard'">정보게시판</button>
+      <button style="margin-top: 2px;" type="button" class="btn btn-outline-success" onclick="location.href='/sharboard'">나눔게시판</button>
+      <button style="margin-top: 2px;" type="button" class="btn btn-outline-danger" onclick="location.href='/quesboard'">질문게시판</button>
+      <hr/>
+    </div>
 
-    <section class="signup-section">
-     <h2>지금 가입하고 우리 커뮤니티의 혜택을 누리세요!</h2>
-    </section>
+    <table class="table">
+      <tr class="header">
+          <td class="num">번호</td>
+          <td class="title">제목</td>
+          <td>작성자</td>
+          <td>날짜</td>
+      </tr>
+  
+      <script>
+          var i, day = 20;
+          for (i = 10; i > 0; i--) {
+              document.write("<tr class='body'>");
+              document.write("<td>" + i +"</td>");
+              document.write("<td class='title'>제목입니다.</td>");
+              document.write("<td>작성자</td>");
+              document.write("<td>24-01-" + day-- + "</td>");
+              document.write("</tr>");
+          }
+      </script>
+  </table>
+  
 
-    <section class="board-section">
-     <h2>게시판</h2>
-     <p>최근 게시글 미리보기</p>
-    </section>
-
-    <section class="hospital-search">
-     <h2>병원찾기</h2>
-     <p>주변 동물병원을 쉽게 찾아보세요!</p>
-    </section>
-
-    <section class="mypet-section">
-     <h2>마이펫</h2>
-     <p>자신의 반려동물 정보를 입력하고 공유하세요.</p>
-    </section>
-
-
+  <div class="btn-w">
+      <button class="notice-button" onclick="location.href='/post'">글쓰기</button>
+  </div>
+  
+  <!-- 페이지 번호 -->
+  <ul class="number">
+      <li><a href="#">&lt;</a></li>
+      <li><a href="#" class="active">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">4</a></li>
+      <li><a href="#">&gt;</a></li>
+  </ul>
 
 
 
