--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/post.css">
 
 </head>
 
@@ -55,25 +55,28 @@
 
     <!-- 헤더 끝 -->
 
-    <section class="signup-section">
-     <h2>지금 가입하고 우리 커뮤니티의 혜택을 누리세요!</h2>
-    </section>
+    <div class="form-container">
 
-    <section class="board-section">
-     <h2>게시판</h2>
-     <p>최근 게시글 미리보기</p>
-    </section>
+     <table> 
+      <th><h2>글쓰기</h2></th>
+      <tr></tr>
 
-    <section class="hospital-search">
-     <h2>병원찾기</h2>
-     <p>주변 동물병원을 쉽게 찾아보세요!</p>
-    </section>
-
-    <section class="mypet-section">
-     <h2>마이펫</h2>
-     <p>자신의 반려동물 정보를 입력하고 공유하세요.</p>
-    </section>
-
+      <tr><td class="header">제목</td></tr>
+      <tr><td><input type="text" placeholder="제목을 입력하세요" name="title"></td></tr>
+      <td>
+          <select class="form-select" aria-label="Default select example" name="category">
+              <option selected>카테고리</option>
+              <option value="1">자유게시판</option>
+              <option value="2">정보게시판</option>
+              <option value="3">나눔게시판</option>
+              <option value="4">질문게시판</option>
+          </select>
+      </td> 
+      <tr><td class="header">내용</td></tr>
+      <tr><td><textarea placeholder="내용을 입력하세요" name="detail"></textarea></td></tr>
+      <tr><td><input type="submit" value="등록" onclick="alert('작성 완료!'); location.href ='/notice';"></td></tr>
+      </table>
+    </div>
 
 
 
