--- a/views/clinic.ejs
+++ b/views/clinic.ejs
@@ -30,10 +30,10 @@
                     <a class="nav-link active" href="/">홈</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mypage">마이페이지</a>
+                    <a class="nav-link" href="/profile">마이페이지</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/notice">게시판</a>
+                    <a class="nav-link" href="/posts">게시판</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/mypet">마이펫</a>
@@ -45,7 +45,7 @@
                 </ul>
                                  
                 <form class="d-flex">
-                    <button type="button" onclick="window.location.href='/singup';">회원가입</button>
+                    <button type="button" onclick="window.location.href='/register';">회원가입</button>
                     <button type="button" onclick="window.location.href='/login';">로그인</button>
                 </form>
 
