--- a/views/post/posts.ejs
+++ b/views/post/posts.ejs
@@ -29,10 +29,10 @@
                     <a class="nav-link active" href="/">홈</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mypage">마이페이지</a>
+                    <a class="nav-link" href="/profile">마이페이지</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/notice">게시판</a>
+                    <a class="nav-link" href="/posts">게시판</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/mypet">마이펫</a>
@@ -44,7 +44,7 @@
                 </ul>
                                  
                 <form class="d-flex">
-                    <button type="button" onclick="window.location.href='/singup';">회원가입</button>
+                    <button type="button" onclick="window.location.href='/register';">회원가입</button>
                     <button type="button" onclick="window.location.href='/login';">로그인</button>
                 </form>
 
@@ -87,7 +87,7 @@
   
 
   <div class="btn-w">
-      <button class="notice-button" onclick="location.href='/post'">글쓰기</button>
+      <button class="notice-button" onclick="location.href='/new'">글쓰기</button>
   </div>
   
   <!-- 페이지 번호 -->
