--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,6 @@
 </head>
 
 <body>
-
- <!-- 헤더 시작 -->
     <header class="header-menu" id="header-menu">
 
         <div class="header-menu-wrapper">
@@ -29,10 +27,10 @@
                     <a class="nav-link active" href="/">홈</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mypage">마이페이지</a>
+                    <a class="nav-link" href="/profile">마이페이지</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/notice">게시판</a>
+                    <a class="nav-link" href="/posts">게시판</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/mypet">마이펫</a>
@@ -44,7 +42,7 @@
                 </ul>
                                  
                 <form class="d-flex">
-                    <button type="button" onclick="window.location.href='/singup';">회원가입</button>
+                    <button type="button" onclick="window.location.href='/register';">회원가입</button>
                     <button type="button" onclick="window.location.href='/login';">로그인</button>
                 </form>
 
@@ -53,7 +51,6 @@
          </div>
     </header>
 
-    <!-- 헤더 끝 -->
 
     <section class="signup-section">
      <h2>지금 가입하고 우리 커뮤니티의 혜택을 누리세요!</h2>
