--- a/views/pet/mypet.ejs
+++ b/views/pet/mypet.ejs
@@ -21,13 +21,13 @@
           <a class="navbar-brand">PetTalk</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link active" href="/">홈</a></li>
-            <li class="nav-item"><a class="nav-link" href="/mypage">마이페이지</a></li>
-            <li class="nav-item"><a class="nav-link" href="/notice">게시판</a></li>
+            <li class="nav-item"><a class="nav-link" href="/profile">마이페이지</a></li>
+            <li class="nav-item"><a class="nav-link" href="/posts">게시판</a></li>
             <li class="nav-item"><a class="nav-link" href="/mypet">마이펫</a></li>
             <li class="nav-item"><a class="nav-link" href="/clinic">병원찾기</a></li>
           </ul>
           <form class="d-flex">
-            <button type="button" onclick="window.location.href='/signup';">회원가입</button>
+            <button type="button" onclick="window.location.href='/register';">회원가입</button>
             <button type="button" onclick="window.location.href='/login';">로그인</button>
           </form>
         </div>
