--- a/views/post/new.ejs
+++ b/views/post/new.ejs
@@ -29,10 +29,10 @@
                     <a class="nav-link active" href="/">홈</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mypage">마이페이지</a>
+                    <a class="nav-link" href="/profile">마이페이지</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/notice">게시판</a>
+                    <a class="nav-link" href="/posts">게시판</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/mypet">마이펫</a>
@@ -44,7 +44,7 @@
                 </ul>
                                  
                 <form class="d-flex">
-                    <button type="button" onclick="window.location.href='/singup';">회원가입</button>
+                    <button type="button" onclick="window.location.href='/register';">회원가입</button>
                     <button type="button" onclick="window.location.href='/login';">로그인</button>
                 </form>
 
@@ -74,7 +74,7 @@
       </td> 
       <tr><td class="header">내용</td></tr>
       <tr><td><textarea placeholder="내용을 입력하세요" name="detail"></textarea></td></tr>
-      <tr><td><input type="submit" value="등록" onclick="alert('작성 완료!'); location.href ='/notice';"></td></tr>
+      <tr><td><input type="submit" value="등록" onclick="alert('작성 완료!'); location.href ='/posts';"></td></tr>
       </table>
     </div>
 
